Fix stretching issue for high resolutions

--- a/blocks/header/__container/header__container.css
+++ b/blocks/header/__container/header__container.css
@@ -25,5 +25,6 @@
 @media screen and (min-width: 1280px) {
   .header__container {
     width: calc(100% - 2 * 148px);
+    max-width: 984px;
   }
 }
