--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -23,5 +23,6 @@
 @media screen and (min-width: 1280px) {
   .intro {
     width: calc(100% - 2 * 148px);
+    max-width: 984px;
   }
 }
