--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -27,6 +27,7 @@
 
 @media screen and (min-width: 1280px) {
   .photo-grid {
+    max-width: 1184px;
     grid-template-columns: repeat(4, 1fr);
     gap: 16px;
   }
